fix bug with where card overflowed outside out of sight

--- a/src/index.css
+++ b/src/index.css
@@ -30,9 +30,6 @@ body {
   background-color: var(--cream);
   margin: 0;
   padding: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
